compiler/tests/fail/stack_allocation/x86-64/merge_globals.jazz
u64[2] g1 = {0,1};
u64[2] g2 = {0,1};

fn f (reg ptr u64[1] r1) -> reg u64 {
  reg u64 res;
  reg ptr u64[2] rg;
  rg = g1;
  rg[0:1] = g2[0:1];
  res = rg[0];
  return res;
}

export fn dummy() -> reg u64 {
  stack u64[1] s;
  reg u64 r;
  r = f(s);
  return r;
}
